# Cmake_Learning

01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/A-hello-cmake/src/: main.cpp
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/source_code/src/: Hello.cpp
01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/source_code/include/static/: Hello.h
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/source_code/include/shared/: Hello.h
